--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -21,5 +21,5 @@
                [picture]="user?.picture">
       </nb-user>
     </nb-action>
-  </nb-actions> -->
-</div>
+  </nb-actions>
+</div> -->
