--- a/src/app/pages/e-commerce/e-commerce.component.html
+++ b/src/app/pages/e-commerce/e-commerce.component.html
@@ -11,7 +11,7 @@
 
     <div class="row">
       <div class="col">
-      <ngx-ecommerce-visitors-analytics></ngx-ecommerce-visitors-analytics>
+      <ngx-ecommerce-charts></ngx-ecommerce-charts>
     </div>
     </div>
   </div>
